Modernize Java language (#397)
* Use new language features